[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghn"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mellea[hooks]>=0.4.2",
    "pydantic>=2.0",
]

[project.scripts]
ghn = "ghn.main:main"

[tool.setuptools.packages.find]
include = ["ghn*"]
